fix: some spacing changes in the footer

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -3,10 +3,10 @@ footer{
     justify-content: center;
     align-items: center;
     gap: 1.9rem;
-    margin-bottom: 2.5rem;
+    margin: 0.5rem 0 2rem;
 
     @media (max-width: 550px){
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
 
         svg{
             width: 30px;
