--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -3,7 +3,7 @@ nav{
     align-items: center;
     justify-content: center;
     gap: 36px;
-    margin-top: 2.5rem;
+    margin: 2.5rem 0 0.5rem;
 
     @media (max-width: 550px){
         margin-top: 1.5rem;
